discussion/kv_engine/158265/158265_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-36377: Move KVStore::FlushState to kvstore_fwd.h

This allows us to remove the inclusion of kvstore.h from
persistence_callback.h which we'll need in a future patch to include
persistence_callback.h in kvstore.h so that we can add a default
constructed PersistenceCallback to KVStore::makeTransactionContext.

Change-Id: I52aa496ad3de5c4a42781af5a0704474fde5bc80

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-07-27 07:19:59.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-27 07:52:25.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10852/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/persistence_callback.cc:26:29: error: out-of-line definition of "operator()" does not match any declaration in "EPPersistenceCallback" [clang-diagnostic-error]
void EPPersistenceCallback::operator()(const queued_item& queuedItem,
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/persistence_callback.cc:96:29: error: out-of-line definition of "operator()" does not match any declaration in "EPPersistenceCallback" [clang-diagnostic-error]
void EPPersistenceCallback::operator()(const queued_item& queuedItem,
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/persistence_callback.h:29:35: error: unknown type name "queued_item" [clang-diagnostic-error]
    virtual void operator()(const queued_item&, FlushStateMutation){};
                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/persistence_callback.h:35:35: error: unknown type name "queued_item" [clang-diagnostic-error]
    virtual void operator()(const queued_item&, FlushStateDeletion){};
                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/persistence_callback.h:44:27: error: unknown type name "queued_item" [clang-diagnostic-error]
    void operator()(const queued_item&, FlushStateMutation) override;
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/persistence_callback.h:50:27: error: unknown type name "queued_item" [clang-diagnostic-error]
    void operator()(const queued_item&, FlushStateDeletion) override;
                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10852/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/persistence_callback.cc:26:29:
error: out-of-line definition of "operator()" does not match any declaration in "EPPersistenceCallback" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10852/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32449/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/persistence_callback.h:29:35:
error: unknown type name "queued_item"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32449/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9513/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38061/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/468/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12616/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12967/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12439/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11553/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20517/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/440/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-07-27 19:26:27.000000000
Message: 
Patch Set 1: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
